added a new img

--- a/msd.html
+++ b/msd.html
@@ -10,7 +10,7 @@
     <center>
         <h1 class="one">MS DHONI</h1>
         <hr>
-        <img class="three" src="Saved Pictures/wp6390945.webp" alt="">
+        <img class="three" src="OIP.jpg" alt="">
         <h1 class="two">Mahendra Singh Dhoni 🏏</h1>
     </center>
     
